5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4076/executions/1602_1014.log
== TEST (2019-03-20 19:17:53) 
-- CODE:
total=float(input("valor*30/100")
print(total)
-- ERROR:
File "XXXX", line 2
    print(total)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:20:49) 
-- CODE:
total=float(input("valor*30/100")
print(lucro)
-- ERROR:
File "XXXX", line 2
    print(lucro)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:21:05) 
-- CODE:
total=float(input("valor*30/100")
print(total lucro)
-- ERROR:
File "XXXX", line 2
    print(total lucro)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:21:10) 
-- CODE:
total=float(input("valor*30/100")
print(total lucro)
-- ERROR:
File "XXXX", line 2
    print(total lucro)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:21:33) 
-- CODE:
total=float(input("valor*30/100")
print(30)
-- ERROR:
File "XXXX", line 2
    print(30)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:22:08) 
-- CODE:
total=float(input("valor*30/100")
print(total)
-- ERROR:
File "XXXX", line 2
    print(total)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:22:28) 
-- CODE:
total=float(input("valor*30/100")
print(valor)
-- ERROR:
File "XXXX", line 2
    print(valor)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:23:44) 
-- CODE:
total=float(input("valor*30/100")
print(round(total,2)
-- ERROR:
File "XXXX", line 2
    print(round(total,2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:23:58) 
-- CODE:
total=float(input("valor*30/100"))
print(round(total,2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:24:26) 
-- CODE:
total=float(input("valor*30/100"))
print(round(total,2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:24:31) 
-- CODE:
total=float(input("valor*30/100"))
print(round(total,2))
-- EXECUTION TIME:
0.136608
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
700.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:24:38) 
-- CODE:
total=float(input("valor*30/100"))
print(round(total,2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:25:10) 
-- CODE:
total=float(input("valor*30/100"))
print(round(total,2))
-- EXECUTION TIME:
0.134907
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
700.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:25:13) 
-- CODE:
total=float(input("valor*30/100"))
print(round(total,2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:27:21) 
-- CODE:
total=float(input("valor*30/100"))
print(round(total,2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:27:27) 
-- CODE:
total=float(input("valor*30/100"))
print(round(total,2))
-- EXECUTION TIME:
0.139015
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
700.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:27:58) 
-- CODE:
total=float(input("valor*30/100"))
print(round(valor,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(round(valor,2))
NameError: name 'valor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:28:04) 
-- CODE:
total=float(input("valor*30/100"))
print(round(valor,2))
-- EXECUTION TIME:
0.134426
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1014/main.py", line 2, in <module>
    print(round(valor,2))
NameError: name 'valor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:02:29) 
-- CODE:
total=float(input("valor*30/100"))
print(round(3))
-- OUTPUT:
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:02:52) 
-- CODE:
total=float(input("valor"*30/100"))
print(round(3))
-- ERROR:
File "XXXX", line 1
    total=float(input("valor"*30/100"))
                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:17:37) 
-- CODE:
total=float(input("valor"30/100))
print(round(3))
-- ERROR:
File "XXXX", line 1
    total=float(input("valor"30/100))
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:26:31) 
-- CODE:
total=float(input(30/100*))
print(round(3))
-- ERROR:
File "XXXX", line 1
    total=float(input(30/100*))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:38:15) 
-- CODE:
total=float(input(30/100))
print(round(3))
-- OUTPUT:
0.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:38:21) 
-- CODE:
total=float(input(30/100))
print(round(3))
-- OUTPUT:
0.33
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:38:31) 
-- CODE:
total=float(input(30/100))
print(round(0.3))
-- OUTPUT:
0.30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:38:34) 
-- CODE:
total=float(input(30/100))
print(round(0.3))
-- EXECUTION TIME:
0.211456
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
0.30
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:39:15) 
-- CODE:
total=float(input(30/100))
print(round(total))
-- OUTPUT:
0.3700
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:40:04) 
-- CODE:
total=float(input(30/100))
print(round(0.3))
-- OUTPUT:
0.30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:41:28) 
-- CODE:
total=input(float(30/100))
print(round(0.3))
-- OUTPUT:
0.30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:52:17) 
-- CODE:
valor= float(input("qual o total de vendas?"))
total=((valor*30)/100)


-- OUTPUT:
0.30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:53:10) 
-- CODE:
valor= float(input("qual o total de vendas?"))
total=((valor*30)/100)
print(round(total,2))

-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:54:02) 
-- CODE:
valor= float(input("qual o total de vendas?"))
total=((valor*30/100)
print(round(total,2))

-- ERROR:
File "XXXX", line 3
    print(round(total,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:54:24) 
-- CODE:
valor= float(input("qual o total de vendas?"))
total=((valor*30/100)
print(round(vendas,2))

-- ERROR:
File "XXXX", line 3
    print(round(vendas,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:54:51) 
-- CODE:
valor= float(input("qual o total de vendas?"))
total=((valor*30/100)


-- ERROR:
File "XXXX", line 4
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:55:42) 
-- CODE:
valor=float(input("qual o total de vendas?"))
total=((valor*30/100))
print(valor,2)
-- OUTPUT:
700.5 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:56:01) 
-- CODE:
valor=float(input("qual o total de vendas?"))
total=((valor*30/100))
print(valor, 2)
-- OUTPUT:
700.5 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:56:06) 
-- CODE:
valor=float(input("qual o total de vendas?"))
total=((valor*30/100))
print(valor, 2)
-- EXECUTION TIME:
0.137337
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
700.5 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:56:10) 
-- CODE:
valor=float(input("qual o total de vendas?"))
total=((valor*30/100))
print(valor, 2)
-- OUTPUT:
700.5 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:57:16) 
-- CODE:
valor=float(input("qual o total de vendas?"))
total=((valor*30/100))
print(round(valor, 2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:57:22) 
-- CODE:
valor=float(input("qual o total de vendas?"))
total=((valor*30/100))
print(round(valor, 2))
-- EXECUTION TIME:
0.127849
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
700.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:57:56) 
-- CODE:
valor=(float(input("qual o total de vendas?")))
total=((valor*30/100))
print(round(valor, 2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:58:26) 
-- CODE:
valor=float(input("qual o total de vendas?"))
total=((valor*30/100))
print(round(valor, 2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:58:56) 
-- CODE:
valor=float(input("qual o total de vendas? "))
total=(valor*30/100)
print(round(valor, 2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:59:48) 
-- CODE:
valor=float(input("qual o total de vendas? "))
total=(valor*30/100)
print (round(valor, 2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:00:27) 
-- CODE:
valor=float(input("qual sera total de vendas? "))
total=(valor*30/100)
print (round(valor, 2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:01:37) 
-- CODE:
valor=float(input("qual sera total de vendas? "))
total=((valor*30)/100)
print (round(valor, 2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:02:20) 
-- CODE:
valor= float(input(" qual sera total de vendas? "))
total= ((valor*30)/100)
print (round(valor, 2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:03:17) 
-- CODE:
valor = (float(input("qual sera total de vendas? ")))
total = ((valor*30)/100)
print (round(valor, 2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:03:25) 
-- CODE:
valor = (float(input("qual sera total de vendas? ")))
total = ((valor*30)/100)
print (round(valor, 2))
-- EXECUTION TIME:
0.120807
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
700.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:04:11) 
-- CODE:
valor = (float(input("qual sera total de venda? ")))
total = ((valor*30)/100)
print (round(valor, 2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:04:30) 
-- CODE:
valor = (float(input("qual sera total de venda? ")))
total = ((valor*30)/100)
print (round(valor, 2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:15:37) 
-- CODE:
valor = (float(input("qual sera total de venda? ")))
total = ((valor*30)/100)
print (round(valor, 2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:15:45) 
-- CODE:
valor = (float(input("qual sera total de venda? ")))
total = ((valor*30)/100)
print (round(valor, 2))
-- EXECUTION TIME:
0.175432
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
700.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:16:11) 
-- CODE:
valor = (float(input("qual sera total de venda? ")))
total = ((valor*30)/100)
print(round(valor, 2))
-- OUTPUT:
700.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:16:20) 
-- CODE:
valor = (float(input("qual sera total de venda? ")))
total = ((valor*30)/100)
print(round(valor, 2))
-- EXECUTION TIME:
0.219004
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
700.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:17:45) 
-- CODE:
valor = (float(input("qual sera total de venda? ")))
total = ((valor*30)/100)
print(round(total, 2))
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:17:56) 
-- CODE:
valor = (float(input("qual sera total de venda? ")))
total = ((valor*30)/100)
print(round(total, 2))
-- EXECUTION TIME:
0.190559
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
